@@ -76,7 +76,8 @@ cmdHdlr confIfCmd[MAX_CONF_IF_CMD] =
 	{"help",		&cifCMD_help,		NULL,				"\t\t\t\t\tdisplay this help"},
 	{"ip",			&cifCMD_ip,		&cifCMD_noip,			"\t\t\t\t\tsome ipv4 modifications"},
 	{"mac-address",		&cifCMD_mac,		&cifCMD_nomac,			"\t\t\t\tmodify interface mac address (hw address)"},
-	{"shutdown",		&cifCMD_shutdown,	&cifCMD_noshutdown,		"\t\t\t\tadmistratively shutdown the interface"}
+	{"shutdown",		&cifCMD_shutdown,	&cifCMD_noshutdown,		"\t\t\t\tadmistratively shutdown the interface"},
+	{"speed",		&cifCMD_speed,		&cifCMD_nospeed,		"\t\t\t\tmodify interface speed"},
 };
 
 cmdHdlr confFWCmd[MAX_CONF_FW_CMD] =
